--- a/pf4j-plus/pom.xml
+++ b/pf4j-plus/pom.xml
@@ -14,6 +14,10 @@
     <name>PF4J-Plus</name>
     <description>Lightweight toolkit providing common platform-level services for PF4J applications</description>
 
+    <properties>
+        <sonar.projectKey>pf4j_pf4j-plus</sonar.projectKey>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
